# openai-compatible-endpoint

./: .dockerignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  server.py  utils.py
hooks/: __init__.py  chart.py
